<resources>
    <string name="app_name">Part2_4</string>
    <string name="name">Tike</string>
    <string name="hello_hay">Hello, How are you?</string>
    <string name="date">18.01.09</string>
    <string name="logo">logo</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="no.1">1</string>
    <string name="no.2">2</string>
    <string name="no.3">3</string>
    <string name="no.4">4</string>
    <string name="no.5">5</string>
    <string name="no.6">6</string>
    <string name="no.7">7</string>
    <string name="no.8">8</string>
    <string name="no.9">9</string>
    <string name="no.0">10</string>
    <string name="bt_x">*</string>
    <string name="bt_sp">/</string>
    <string name="bt_mn">-</string>
    <string name="bt_pu">+</string>
    <string name="bt_sm">=</string>
    <string name="bt_.">.</string>
    <string name="bt_del">del</string>
</resources>
