<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/host"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tistory.tikepjt.part2_4.Lab4_3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@color/colorPrimary" />
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tab_content1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab_1"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tab_content2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab_2"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tab_content3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab_3"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </FrameLayout>
    </LinearLayout>
</TabHost>
